# promptleak-scrubber

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  security.yml
docs/: SKILL_REGISTRY.md  security-audit.md
scripts/: curated_secret_check.py
src/promptleak_scrubber/: __init__.py  __main__.py  cli.py  models.py  patterns.py  scanner.py
tests/: test_cli.py  test_scanner.py
